@@ -6,7 +6,6 @@ import org.junit.Test;
 import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
-import java.util.Arrays;
 import java.util.LinkedHashMap;
 import java.util.List;
 
@@ -56,7 +55,7 @@ public class StreamCodecsTest {
 	@Test
 	public void ofList() {
 		StreamCodec<List<String>> codec = StreamCodecs.ofList(StreamCodecs.ofString());
-		List<String> strings = Arrays.asList("a", "b", "c");
+		List<String> strings = List.of("a", "b", "c");
 		List<String> result = doTest(codec, strings);
 
 		assertEquals(strings, result);
@@ -76,7 +75,7 @@ public class StreamCodecsTest {
 					throw new AssertionError();
 			}
 		});
-		List<Object> objects = Arrays.asList(0, "x", true, 12, "y", false, 34, "11241");
+		List<Object> objects = List.of(0, "x", true, 12, "y", false, 34, "11241");
 		List<Object> result = doTest(codec, objects);
 
 		assertEquals(objects, result);
@@ -140,7 +139,7 @@ public class StreamCodecsTest {
 	@Test
 	public void ofVarIntArrayList() {
 		StreamCodec<List<int[]>> codec = StreamCodecs.ofList(StreamCodecs.ofVarIntArray());
-		List<int[]> expected = Arrays.asList(
+		List<int[]> expected = List.of(
 				new int[]{-1, -2, -3},
 				new int[]{1, 2, 3},
 				new int[]{-1, 0, 1},
@@ -158,7 +157,7 @@ public class StreamCodecsTest {
 	@Test
 	public void ofVarLongArrayList() {
 		StreamCodec<List<long[]>> codec = StreamCodecs.ofList(StreamCodecs.ofVarLongArray());
-		List<long[]> expected = Arrays.asList(
+		List<long[]> expected = List.of(
 				new long[]{-1, -2, -3},
 				new long[]{1, 2, 3},
 				new long[]{-1, 0, 1},
